--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,11 @@
+*{
+  margin: 0; padding: 0; box-sizing: border-box;
+}
+
+body{
+  background-color: #e1e1e1;
+}
+
 h1{
   font-family: sans-serif monospace;
 }
