--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,7 @@
 }
 
 body{
-  margin: 0; padding: 0; width:100%; heght:auto; background-color: #655545;
+  margin: 0; padding: 0; width:100%; heght:auto; background-color: rgba(246,250,246,1.0);
 }
 
 h1{
