--- a/estilo.css
+++ b/estilo.css
@@ -1,5 +1,5 @@
 *{ 
-  margin: 0; padding: 0; width:100%; height:auto;  box-sizing: border-box; font-family: sans-serif monospace;
+  margin: 0; padding: 0; width:100%; height:auto;  box-sizing: border-box; font-family: sans-serif;
 }
 
 body{
